<resources>

    <!-- application name -->
    <string name="app_name">Mad Grid</string>

    <!-- game modes -->
    <string name="mode_classic">Classic</string>
    <string name="mode_reverse">Reverse</string>
    <string name="mode_messy">Messy</string>

    <!-- menu items -->
    <string name="menu_start">Start Game</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_reset">Reset</string>

    <!-- settings items -->
    <string name="settings_music">Music</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_speed">Sequence Display Speed</string>
    <string-array name="settings_speeds">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string name="settings_rate">Rate on Google Play</string>
    <string name="settings_github">View on GitHub</string>
    <string name="settings_credits">Credits</string>
    <string name="settings_title_game">Game</string>
    <string name="settings_title_social">Social</string>

    <!-- credits & attributions -->
    <string name="credits">
        <b>Developer</b>
        \nBarbod Habibi
        \nYork University - Lassonde School of Engineering
        \nDept. Electrical Engineering &amp; Computer Science

        \n\n<b>Icon Images</b>
        \nApp icon by <i>Icons8</i>
        \nMusic icon by Jemis Mali on <i>IconScout</i>
        \nAudio icon by Amru ID on <i>IconScout</i>
        \nSpeed icon by Neelpari Minimo on <i>IconScout</i>
        \nThumbs Up icon by Google Inc. on <i>IconScout</i>
        \nGitHub icon by Pixel Icons on <i>IconScout</i>
        \nExclamation icon by Unicons on <i>IconScout</i>

        \n\n<b>Background Images</b>
        \nPrimary background by coolvector on <i>Freepik</i>
        \nSecondary background by coolvector on <i>Freepik</i>
        \nGame background by coolvector on <i>Freepik</i>
    </string>

    <!-- game items -->
    <string name="game_box1Text">1</string>
    <string name="game_box2Text">2</string>
    <string name="game_box3Text">3</string>
    <string name="game_box4Text">4</string>
    <string name="box1_image">(ᵔᴥᵔ)</string>
    <string name="box2_image">｡◕‿‿◕｡</string>
    <string name="box3_image">(｡◕‿◕｡)</string>
    <string name="box4_image">ʕ•ᴥ•ʔ</string>

    <!-- results items -->
    <string name="results_title">Game Over!</string>
    <string name="results_score">Score:</string>
    <string name="results_highest">Highest:</string>

    <!-- placeholders -->
    <string name="placeholder">placeholder</string>
    <string name="placeholder_mode">Mode_Title</string>
    <string name="placeholder_score">NNN</string>
    <string name="placeholder_highest_score_message">highest_score_message_placeholder</string>

    <!-- guide items -->
    <string name="guide_watch_demonstration">Tap on the grid to see a demonstration</string>
    <string name="guide_button_tutorial">Start Tutorial</string>
    <string name="guide_inactive_button">Watch and memorize sequence</string>
    <string name="guide_active_button">Replicate the displayed sequence</string>
    <string name="guide_reverse">Replicate the sequence in reverse order</string>
    <string name="guide_messy">Sequence completely resets in each level</string>
    <string name="guide_dialog_message_correct">Tutorial Completed!</string>
    <string name="guide_dialog_message_incorrect">Wrong Input, Try Again…</string>

    <!-- image descriptions -->
    <string name="menu_back_button">back button</string>
    <string name="menu_mode_right">change mode button right</string>
    <string name="menu_mode_left">change mode button left</string>
    <string name="guide_inactive_icon">inactive box icon</string>
    <string name="guide_active_icon">active box icon</string>
    <string name="guide_hint_icon">light bulb (hint) icon</string>
    <string name="settings_music_icon">music icon</string>
    <string name="settings_vibration_icon">vibration icon</string>
    <string name="settings_sound_icon">sound icon</string>
    <string name="settings_rate_icon">rate on Google Play icon</string>
    <string name="settings_github_icon">view on GitHub icon</string>
    <string name="settings_credits_icon">credits icon</string>
    <string name="settings_open_page_icon">open page icon</string>

</resources>