<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/settings_bar"
        android:translationZ="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="returnToSettings"
            android:padding="14dp"
            android:contentDescription="@string/menu_back_button"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/settings_credits"
            android:textColor="#FFFFFF "
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:gravity="center|top"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/credits"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>