<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_image_primary"
    tools:context=".activities.fragments.GuideMessy">

    <FrameLayout
        android:id="@+id/guide_fragment_messy_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <VideoView
            android:id="@+id/guide_fragment_messy_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

        </VideoView>

        <FrameLayout
            android:id="@+id/guide_fragment_messy_image_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/guide_video_thumbnail" />

    </FrameLayout>

    <TextView
        android:id="@+id/guide_fragment_messy_text_video_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_fragment_messy_frame_layout"
        android:text="@string/guide_watch_demonstration"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:id="@+id/guide_fragment_messy_linear_layout_description_container_1"
        android:background="@drawable/settings_background_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_fragment_messy_text_video_caption"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/guide_fragment_messy_relative_layout_button_inactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/guide_fragment_messy_image_button_inactive"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/guide_grid_background_inactive"
                android:contentDescription="@string/guide_inactive_icon" />

            <TextView
                android:id="@+id/guide_fragment_messy_text_button_inactive_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/guide_fragment_messy_image_button_inactive"
                android:fontFamily="@font/ibm_plex_sans_medium"
                android:text="@string/guide_inactive_button"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/guide_fragment_messy_relative_layout_button_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/guide_fragment_messy_image_button_active"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/guide_grid_background_active"
                android:contentDescription="@string/guide_active_icon" />

            <TextView
                android:id="@+id/guide_fragment_messy_text_button_active_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/guide_fragment_messy_image_button_active"
                android:fontFamily="@font/ibm_plex_sans_medium"
                android:text="@string/guide_active_button"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/guide_fragment_messy_relative_layout_hint"
        android:background="@drawable/settings_background_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_fragment_messy_linear_layout_description_container_1"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/guide_fragment_messy_image_hint"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/guide_hint_icon"
            android:padding="8dp"
            android:contentDescription="@string/guide_hint_icon"/>

        <TextView
            android:id="@+id/guide_fragment_messy_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/guide_fragment_messy_image_hint"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/guide_messy"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>